@@ -520,8 +520,18 @@ Input(client_data, source, id)
 	    if (gvw->ghostview.ps_input &&
 		gvw->ghostview.ps_input->seek_needed) {
 		if (gvw->ghostview.ps_input->len > 0)
+#ifdef HAVE_LFS64
+		    fseeko64(gvw->ghostview.ps_input->fp,
+			  gvw->ghostview.ps_input->begin, SEEK_SET);
+#else
+#ifdef HAVE_OFF_T
+		    fseeko(gvw->ghostview.ps_input->fp,
+			  gvw->ghostview.ps_input->begin, SEEK_SET);
+#else
 		    fseek(gvw->ghostview.ps_input->fp,
 			  gvw->ghostview.ps_input->begin, SEEK_SET);
+#endif
+#endif
 		gvw->ghostview.ps_input->seek_needed = False;
 		gvw->ghostview.bytes_left = gvw->ghostview.ps_input->len;
 	    }
@@ -2093,7 +2103,15 @@ Boolean
 GhostviewSendPS(w, fp, begin, len, close)
     Widget w;
     FILE *fp;
+#ifdef HAVE_LFS64
+    off64_t begin;
+#else
+#ifdef HAVE_OFF_T
+    off_t begin;
+#else
     long begin;
+#endif
+#endif
     unsigned int len;
     Bool close;
 {
