@@ -173,7 +173,15 @@ typedef struct FileDataStruct_ *FileData;
 typedef struct FileDataStruct_ {
    FILE *file;           /* file */
    int   file_desc;      /* file descriptor corresponding to file */
+#ifdef HAVE_LFS64
+   off64_t   filepos;       /* file position corresponding to the start of the line */
+#else
+#ifdef HAVE_OFF_T
+   off_t   filepos;       /* file position corresponding to the start of the line */
+#else
    long   filepos;       /* file position corresponding to the start of the line */
+#endif
+#endif
    char *buf;            /* buffer */
    int   buf_size;       /* size of buffer */
    int   buf_end;        /* last char in buffer given as offset to buf */
@@ -187,10 +195,22 @@ typedef struct FileDataStruct_ {
 static FileData ps_io_init PT((FILE *));
 static void     ps_io_exit PT((FileData));
 static char    *ps_io_fgetchars PT((FileData, int));
-static int      ps_io_fseek PT((FileData, long));
-static long     ps_io_ftell PT((FileData));
+#ifdef HAVE_LFS64
+  static int      ps_io_fseek PT((FileData, off64_t));
+  static off64_t     ps_io_ftell PT((FileData));
+  static char    *readline PT((FileData, char **, off64_t *, unsigned int *));
+#else
+#ifdef HAVE_OFF_T
+  static int      ps_io_fseek PT((FileData, off_t));
+  static off_t     ps_io_ftell PT((FileData));
+  static char    *readline PT((FileData, char **, off_t *, unsigned int *));
+#else
+  static int      ps_io_fseek PT((FileData, long));
+  static long     ps_io_ftell PT((FileData));
+  static char    *readline PT((FileData, char **, long *, unsigned int *));
+#endif
+#endif
 
-static char    *readline PT((FileData, char **, long *, unsigned int *));
 static char    *gettextline PT((char *));
 static char    *ps_gettext PT((char *,char **));
 static int      blank PT((char *));
@@ -354,8 +374,18 @@ psscan(fileP,filename,filename_raw,filename_dscP,cmd_scan_pdf,filename_uncP,cmd_
     char *line;
                            	/* 255 characters + 1 newline + 1 NULL */
     char text[PSLINELENGTH];	/* Temporary storage for text */
+#ifdef HAVE_LFS64
+    off64_t position;		/* Position of the current line */
+    off64_t beginsection;		/* Position of the beginning of the section */
+#else
+#ifdef HAVE_OFF_T
+    off_t position;		/* Position of the current line */
+    off_t beginsection;		/* Position of the beginning of the section */
+#else
     long position;		/* Position of the current line */
     long beginsection;		/* Position of the beginning of the section */
+#endif
+#endif
     unsigned int line_len; 	/* Length of the current line */
     unsigned int section_len;	/* Place to accumulate the section length */
     char *next_char;		/* 1st char after text returned by ps_gettext() */
@@ -429,7 +459,11 @@ unc_ok:
         return(retval);
       }
       umask(old_umask);
+#ifdef HAVE_LFS64
+      tmpfile = fopen64(filename_unc, "r");
+#else
       tmpfile = fopen(filename_unc, "r");
+#endif
       if (!tmpfile) goto unc_exec_failed;
       fclose(*fileP);
       *fileP = tmpfile;
@@ -533,7 +567,11 @@ unc_ok:
       INFSMESSAGE(scan command,cmd)
       
       tmp_filename=file_getTmpFilename(NULL,filename_raw);
+#ifdef HAVE_LFS64
+      tmp_file = fopen64(tmp_filename, "w");
+#else
       tmp_file = fopen(tmp_filename, "w");
+#endif
       dup2(2,100);
       close(2); dup2( fileno(tmp_file), 2);
       
@@ -549,7 +587,11 @@ unc_ok:
 	close(100);
 	fclose(tmp_file);
 	
+#ifdef HAVE_LFS64
+        tmp_file = fopen64( tmp_filename, "r" );
+#else
         tmp_file = fopen( tmp_filename, "r" );
+#endif
 	while ( fgets( line, 999, tmp_file) )
 	{
 	   if (strstr(line,"This file requires a password for access."))
@@ -592,7 +634,11 @@ scan_ok:
       GV_XtFree(tmp_filename);
 
       umask (old_umask);
+#ifdef HAVE_LFS64
+      tmpfile = fopen64(filename_dsc, "r");
+#else
       tmpfile = fopen(filename_dsc, "r");
+#endif
       if (!tmpfile) goto scan_exec_failed;
       fclose(*fileP);
       *fileP = tmpfile;
@@ -1577,7 +1623,15 @@ static FileData ps_io_init(file)
    rewind(file);
    FD_FILE      = file;
    FD_FILE_DESC = fileno(file);
+#ifdef HAVE_LFS64
+   FD_FILEPOS   = ftello64(file);
+#else
+#ifdef HAVE_OFF_T
+   FD_FILEPOS   = ftello(file);
+#else
    FD_FILEPOS   = ftell(file);
+#endif
+#endif
    FD_BUF_SIZE  = (2*LINE_CHUNK_SIZE)+1;
    FD_BUF       = PS_XtMalloc(FD_BUF_SIZE);
    FD_BUF[0]    = '\0';
@@ -1606,11 +1660,27 @@ ps_io_exit(fd)
 static int
 ps_io_fseek(fd,offset)
    FileData fd;
+#ifdef HAVE_LFS64
+   off64_t offset;
+#else
+#ifdef HAVE_OFF_T
+   off_t offset;
+#else
    long offset;
+#endif
+#endif
 {
    int status;
    BEGINMESSAGE(ps_io_fseek)
-   status=fseek(FD_FILE,(long)offset,SEEK_SET);
+#ifdef HAVE_LFS64
+   status=fseeko64(FD_FILE,offset,SEEK_SET);
+#else
+#ifdef HAVE_OFF_T
+   status=fseeko(FD_FILE,offset,SEEK_SET);
+#else
+   status=fseek(FD_FILE,offset,SEEK_SET);
+#endif
+#endif
    FD_BUF_END = FD_LINE_BEGIN = FD_LINE_END = FD_LINE_LEN = 0;
    FD_FILEPOS = offset;
    FD_STATUS  = FD_STATUS_OKAY;
@@ -1622,7 +1692,15 @@ ps_io_fseek(fd,offset)
 /* ps_io_ftell */
 /*----------------------------------------------------------*/
 
+#ifdef HAVE_LFS64
+static off64_t
+#else
+#ifdef HAVE_OFF_T
+static off_t
+#else
 static long
+#endif
+#endif
 ps_io_ftell(fd)
    FileData fd;
 {
@@ -1666,19 +1744,6 @@ static char * ps_io_fgetchars(fd,num)
 
    FD_BUF[FD_LINE_END] = FD_LINE_TERMCHAR; /* restoring char previously exchanged against '\0' */
    FD_LINE_BEGIN       = FD_LINE_END;
-
-#if 0
-   {
-      int fp = (int)(ftell(FD_FILE));
-      if (num<0)  { INFMESSAGE(reading line) }
-      else        { INFMESSAGE(reading specified num of chars) }
-      IIMESSAGE(FD_BUF_SIZE,FD_BUF_END)
-      IIMESSAGE(FD_LINE_BEGIN,FD_LINE_END)
-      INFIMESSAGE(unparsed:,FD_BUF_END-FD_LINE_END)
-      IMESSAGE(fp)
-      IIMESSAGE(FD_FILEPOS,fp-(FD_BUF_END-FD_LINE_END))
-   }
-#endif /* 0 */
 
    do {
       if (num<0) { /* reading whole line */
@@ -1769,16 +1834,18 @@ static char * ps_io_fgetchars(fd,num)
       case).
       (Tim Adye, adye@v2.rl.ac.uk)
       */
+#ifdef HAVE_LFS64
+      FD_FILEPOS         = ftello64(FD_FILE);
+#else
+#ifdef HAVE_OFF_T
+      FD_FILEPOS         = ftello(FD_FILE);
+#else
       FD_FILEPOS         = ftell(FD_FILE);
+#endif
+#endif
    } else
 #endif /* USE_FTELL_FOR_FILEPOS */
       FD_FILEPOS        += FD_LINE_LEN;
-
-#if 0
-   SMESSAGE(FD_BUF+FD_LINE_BEGIN)
-   IIMESSAGE(FD_LINE_BEGIN,FD_LINE_END)
-   IIMESSAGE(FD_BUF_END,FD_LINE_LEN)
-#endif
 
    ENDMESSAGE(ps_io_fgetchars)
    return(FD_BUF+FD_LINE_BEGIN);
@@ -1799,7 +1866,15 @@ static char * ps_io_fgetchars(fd,num)
 static char * readline (fd, lineP, positionP, line_lenP)
    FileData fd;
    char **lineP;
+#ifdef HAVE_LFS64
+   off64_t *positionP;
+#else
+#ifdef HAVE_OFF_T
+   off_t *positionP;
+#else
    long *positionP;
+#endif
+#endif
    unsigned int *line_lenP;
 {
    unsigned int nbytes=0;
@@ -2071,7 +2146,11 @@ pscopydoc(dest_file,src_filename,d,pagelist)
     BEGINMESSAGE(pscopydoc)
 
     INFSMESSAGE(copying from file, src_filename)
+#ifdef HAVE_LFS64
+    src_file = fopen64(src_filename, "r");
+#else
     src_file = fopen(src_filename, "r");
+#endif
     fd = ps_io_init(src_file);
 
     i=0;
